* started implementing player notifications
* started implementing the notifications as remoteviews

* continued with the refactor

* continued

* fixed a bug where pending intents were holding state

* some clean up

* introduced PlayPauseStopRemoteView
* send unique requestcode to stop duplicate intents

* fixed ktlint issues

* moved exoplayer and mediasource outside of the Player object so it can be configured by the library user

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">exoplayer streaming example</string>
+    <string name="app_name">exoeasy</string>
+    <string name="app_notification_channel_id">exoeasy_id</string>
+    <string name="app_notification_channel_name">exoeasy</string>
 </resources>
